pulled out another broilerplate action

--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -228,7 +228,6 @@ jobs:
   wdlGen:
     runs-on: ubuntu-latest
     name: Test WDL Generation
-    needs: installCromwell
     steps:
       - uses: actions/checkout@v2
         with:
@@ -251,11 +250,11 @@ jobs:
 
   wdlTests:
     runs-on: ubuntu-latest
-    name: Test WDL Generation
-    needs: installCromwell
     strategy:
       matrix:
         wdlTest: [ RUN_CNV_GERMLINE_COHORT_WDL, RUN_CNV_GERMLINE_CASE_WDL, RUN_CNV_SOMATIC_WDL, RUN_M2_WDL, RUN_CNN_WDL ]
+
+    name: WDL test ${{ matrix.wdlTest }} on cromwell ${{ env.CROMWELL_VERSION }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -269,7 +268,7 @@ jobs:
       - uses: ./.github/actions/install-cromwell
         with:
           CROMWELL_VERSION: ${{ env.CROMWELL_VERSION }}
-          
+
       - name: "CNV_GERMLINE_COHORT_WDL_TEST"
         if: ${{ matrix.wdlTest }} == RUN_CNV_GERMLINE_COHORT_WDL
         run: |
