the docs are terrible, try other peoples tutorials instead

--- a/.github/actions/install-cromwell/action.yml
+++ b/.github/actions/install-cromwell/action.yml
@@ -5,7 +5,7 @@ inputs:
     description: 'Cromwell Version to download'
     required: true
 runs:
-  using: "composite"
+  using: composite
   steps:
     - name: Set Cromwell env variables
         run: |
