--- a/.github/actions/upload-results/action.yml
+++ b/.github/actions/upload-results/action.yml
@@ -14,7 +14,7 @@ runs:
   steps:
     - name: Upload to codecov
       run: bash <(curl -s https://raw.githubusercontent.com/broadinstitute/codecov-bash-uploader/main/codecov-verified.bash)
-
+      shell: bash
     - name: Upload test results
       if: always()
       uses: actions/upload-artifact@v2
@@ -26,9 +26,10 @@ runs:
       run: |
         $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/;
         echo "See the test report at https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/tests/test/index.html";
-
+      shell: bash
     - name: Updating the PR travis results
       if: github.event_name == 'pull_request' && failure()
       run:
         pip install --user PyGithub;
         python scripts/travis/Reporter.py https://storage.googleapis.com${{ env.HELLBENDER_TEST_LOGS }}${{ env.REPORT_PATH }}/tests/test/index.html;
+      shell: bash
