changes to the test scripts to hopefully use the new directory structure

--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -269,6 +269,11 @@ jobs:
         with:
           CROMWELL_VERSION: ${{ env.CROMWELL_VERSION }}
 
+      - name: "Exporting Environment Variables for Wdl Scripts"
+        run: |
+          "TRAVIS_PULL_REQUEST=${{ github.event_name }} == 'pull_request' " >> $GITHUB_ENV
+          "TRAVIS_COMMIT=${{ github.sha }}" >> $GITHUB_ENV
+
       - name: "Installing GATK for tests"
         run: |
           ./gradlew assemble;
