changes to the test scripts to hopefully use the new directory structure

--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -271,7 +271,11 @@ jobs:
 
       - name: "Exporting Environment Variables for Wdl Scripts"
         run: |
-          "TRAVIS_PULL_REQUEST=$[[${{ github.event_name }} == 'pull_request']] " >> $GITHUB_ENV
+          if [[ ${{ github.event_name }} == 'pull_request']]; then
+            "TRAVIS_PULL_REQUEST=true" >> $GITHUB_ENV 
+          else; 
+             "TRAVIS_PULL_REQUEST=false" >> $GITHUB_ENV 
+          fi
           "TRAVIS_COMMIT=${{ github.sha }}" >> $GITHUB_ENV
 
       - name: "Installing GATK for tests"
