changes to the test scripts to hopefully use the new directory structure

--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -271,7 +271,7 @@ jobs:
 
       - name: "Exporting Environment Variables for Wdl Scripts"
         run: |
-          if [[ ${{ github.event_name }} == 'pull_request']]
+          if [[ "${{ github.event_name }}" == "pull_request"]]
           then
             "TRAVIS_PULL_REQUEST=true" >> $GITHUB_ENV 
           else
