--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -282,11 +282,11 @@ jobs:
         run: |
           if [[ "${{ github.event_name }}" == "pull_request" ]]
           then
-            "TRAVIS_PULL_REQUEST=true" >> $GITHUB_ENV 
+            echo "TRAVIS_PULL_REQUEST=true" >> $GITHUB_ENV 
           else
-             "TRAVIS_PULL_REQUEST=false" >> $GITHUB_ENV 
+            echo "TRAVIS_PULL_REQUEST=false" >> $GITHUB_ENV 
           fi
-          "TRAVIS_COMMIT=${{ github.sha }}" >> $GITHUB_ENV
+          echo "TRAVIS_COMMIT=${{ github.sha }}" >> $GITHUB_ENV
 
       - name: "Installing GATK for tests"
         run: |
