--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -109,7 +109,7 @@ jobs:
         run: ./gradlew compileTestJava
 
       - name: Run tests
-        run: ./gradlew -Dscala.version=${{ SCALA_VERSION }} test jacocoTestReport
+        run: ./gradlew -Dscala.version=${{ env.SCALA_VERSION }} test jacocoTestReport
 
       - uses: /broadinstitute/gatk/.github/actions/upload-results@lb_github_actions
         if: always()
