fixing two things

--- a/.github/workflows/gatk-tests.yml
+++ b/.github/workflows/gatk-tests.yml
@@ -89,7 +89,7 @@ jobs:
         run: |
           ./gradlew assemble;
           ./gradlew installDist;
-          ./gradlew compileJava
+          ./gradlew shadowJar;
 
       #Google Cloud stuff
       - id: 'auth'
